--- a/templates/html/sidebar-left.html
+++ b/templates/html/sidebar-left.html
@@ -10,30 +10,30 @@
 	<ul class="price-list">
 		<li>
 			<span class="tariff-descr">High School:</span>
-			<div class="tag-bg"><span class="currency">$<span class="price-numb">10</span></span>/page</div>
+			<div class="tag-bg"><span class="currency">$<span class="price-numb">12.99</span></span>/page</div>
 		</li>
 
 		<li>
 			<span class="tariff-descr">College:</span>
-			<div class="tag-bg"><span class="currency">$<span class="price-numb">13</span></span>/page</div>
+			<div class="tag-bg"><span class="currency">$<span class="price-numb">15.99</span></span>/page</div>
 		</li>
 
 		<li>
 			<span class="tariff-descr">University:</span>
-			<div class="tag-bg"><span class="currency">$<span class="price-numb">14</span></span>/page</div>
+			<div class="tag-bg"><span class="currency">$<span class="price-numb">17.99</span></span>/page</div>
 		</li>
 
 		<li>
 			<span class="tariff-descr">Master's:</span>
-			<div class="tag-bg"><span class="currency">$<span class="price-numb">20</span></span>/page</div>
+			<div class="tag-bg"><span class="currency">$<span class="price-numb">22.99</span></span>/page</div>
 		</li>
 
 		<li>
 			<span class="tariff-descr">Ph. D.:</span>
-			<div class="tag-bg"><span class="currency">$<span class="price-numb">25</span></span>/page</div>
+			<div class="tag-bg"><span class="currency">$<span class="price-numb">27.99</span></span>/page</div>
 		</li>
 	</ul>
-	<a href="{% url 'pricing' %}" class="btn-transparent btn-grey">Full Price Table</a>
+	<a href="{% url 'pricing' %}" class="btn-transparent btn-grey" rel="nofollow">Full Price Table</a>
 </section>
 
 <section class="sibebar-section">
