--- a/templates/pages/disclaimer.html
+++ b/templates/pages/disclaimer.html
@@ -1,6 +1,6 @@
 {% extends 'index.html' %}
 
-{% block head_meta %}<meta name="robots" content="nofollow" />{% endblock %}
+{% block head_meta %}<meta name="robots" content="nofollow, noindex" />{% endblock %}
 
 {% block meta_title %}Disclaimer{% endblock %}
 {% block meta_description %}{% endblock %}
@@ -24,13 +24,6 @@
 	<section>
 		<h4>General Disclaimer</h4>
 		<p>This site is intended to enable applicants to write better application essays. To offer admission to it's applicants is the sole discretion of the concerned university and it will make this decision based on numerous factors. Using the advice on this site by no means guarantees admission. The creators of this site will accept no responsibility for the acceptance or denial of admission to the users of this site. If you find this policy unacceptable, please refrain from using this site. If you have any questions or comments regarding this disclaimer, please email us at <a href="mailto:info@essaycoffee.com" class="more">info@essaycoffee.com</a>.</p>
-	</section>
-	
-	<section>
-		<h4>Essays Disclaimer</h4>
-		<p>The sample essays that we have used on this site are actual essays that were authored by applicants to American universities. We haven't altered these essays apart from sections that have been modified to protect the author's identity. We do not claim that these essays are by any means perfect. They have been chosen to be uploaded because we feel that they contain certain elements that applicants should look out for. There are also numerous aspects that all applicants should avoid. Hence these essays have been critiqued. You can access critiques for each paragraph by clicking on the appropriate button provided alongside the relevant paragraph.</p>
-		<p>We encourage the users of our site to exercise common sense and discretion while using these essays and their critiques. We strongly advise our users against copying the essays, or parts thereof, since there are numerous services on the internet that allow universities to check essays for suspected plagiarism. One such service is www.plagiarism.org. We'd advise any user who is tempted to copy-paste parts of these essays to first consult what services such as plagiarism.org have to offer. In case you do decide to plagiarise these essays, we absolve ourselves of all responsibility for the dire consequences that could (and should) follow. Please remember that these essays are meant to enable you to write better and they're certainly not intended to be short-cuts to application-essay glory.</p>
-		<p>If you have any questions or comments regarding this disclaimer, please email us at <a href="mailto:info@essaycoffee.com" class="more">info@essaycoffee.com</a>. <strong>This warning does not revoke any of the terms of our</strong> <a href="{% url 'disclaimer' %}" class="more">general disclaimer</a>.</p>
 	</section>
 </div>
 <!-- END MIDDLE LAYOUT -->
