--- a/templates/pages/money-back-guarantee.html
+++ b/templates/pages/money-back-guarantee.html
@@ -1,6 +1,6 @@
 {% extends 'index.html' %}
 
-{% block head_meta %}<meta name="robots" content="nofollow" />{% endblock %}
+{% block head_meta %}<meta name="robots" content="nofollow, noindex" />{% endblock %}
 
 {% block meta_title %}Money Back Guarantee{% endblock %}
 {% block meta_description %}{% endblock %}
@@ -152,42 +152,6 @@
 				<p>In case of a full refund request, the Company reserves the right to publish the paper online for commercial purposes. We do not keep any kind of essay databases, and "publish online" means that if the paper is googled, searched for in a search engine, or checked by any kind of anti-plagiarism software, it links back to our website. It may also be published as content or as a sample essay. This is done to protect our writer’s work in cases when a customer claims a refund after the work has been completed and used.</p>
 				<p>Customers have the opportunity to review their order and request additional corrections if necessary. <strong class="red">However, once you press the "Approve order" button, which provides access to an editable and printable version of the paper, you cannot request a full refund. If you have at least once approved either the initial, or the revised version of your paper using the "Approve Order" button, you are only eligible for a partial refund.</strong></p>
 				<p>All full&nbsp;refund requests should be submitted through the&nbsp;<strong>"Refund"</strong> button on your personal order page <strong>within 14 days from the time the paper is delivered</strong>.</p>
-			  </div>
-			</div>
-		</div>
-		
-		<!-- Question 9 -->
-		<div class="panel panel-default">
-			<div class="panel-heading">
-			  <h4 class="panel-title">
-				<a data-toggle="collapse" data-parent="#accordion" href="#question-9">I would like to receive a refund for an additional service/feature</a>
-			  </h4>
-			</div>
-			<div id="question-9" class="panel-collapse collapse">
-			  <div class="panel-body">
-				<h5>Progressive Delivery order</h5>
-				<p>For orders using the Progressive Delivery feature, the deadline for a revision request is limited to 21 days after initial approval. Once you press the "Approve part" button in your Progressive Delivery and proceed to the next section of your order, you cannot request a refund for the previously approved part.</p>
-				<p>You can receive a refund for only the last section of the order delivered to you. All parts of the order approved using "Approve part" button become non-refundable once we start working on the next section.  The 10% Progressive Delivery fee itself is non-refundable.</p>
-				<h5>Samples service</h5>
-				<p>The $5 deposit for our Writer’s sample service is non-refundable, so please make sure you check the samples provided on time. If you fail to request a different writer within the given time, we regard it as acceptance of the writer initially assigned.</p>
-				<h5>Writer’s category</h5>
-				<p>If you pay the extra fee for an Advanced or ENL (English as a Native Language) writer, but we are unable to find one to work on your order at the time, and assign a writer with a lower category (such as Best Available) instead, the extra fee is refunded to you.</p>
-				<h5>A copy of the sources used</h5>
-				<p>The additional fee you pay for this service becomes non-refundable once the copies of the sources are delivered with your paper. In case they were not provided upon delivery for some reason this payment will be refunded.</p>
-			  </div>
-			</div>
-		</div>
-		
-		<!-- Question 10 -->
-		<div class="panel panel-default">
-			<div class="panel-heading">
-			  <h4 class="panel-title">
-				<a data-toggle="collapse" data-parent="#accordion" href="#question-10">I received my completed paper, but forgot to approve it</a>
-			  </h4>
-			</div>
-			<div id="question-10" class="panel-collapse collapse">
-			  <div class="panel-body">
-				<p>Please note you have 14 days to approve your order (or order part for orders with Progressive Delivery feature). Time for approval is calculated automatically from the moment the last version is uploaded to your personal order page. If you fail to request a revision or to approve your order (or order part) <strong>within 14 days, the paper is approved automatically by the system</strong>. From the moment the order is approved (by you or the system), you have 14 days to request a refund. After that, no refund request is possible.</p>
 			  </div>
 			</div>
 		</div>
