--- a/templates/pages/pricing.html
+++ b/templates/pages/pricing.html
@@ -1,5 +1,7 @@
 {% extends 'index.html' %}
 
+{% block head_meta %}<meta name="robots" content="nofollow, noindex" />{% endblock %}
+
 {% block meta_title %}Prices{% endblock %}
 {% block meta_description %}{% endblock %}
 {% block meta_keywords %}{% endblock %}
@@ -211,7 +213,7 @@
 
 	<section>
 		<h3>About the Pricing Policy</h3>
-		<p>Prices at EssayHave.com are set to the industry average, allowing us to employ writers who meet the high standard demands applied to your work, using the US and European writers who have professional experience developing the best quality research for all your coursework, even your written dissertations and thesis work.</p>
+		<p>Prices at EssayCoffee.com are set to the industry average, allowing us to employ writers who meet the high standard demands applied to your work, using the US and European writers who have professional experience developing the best quality research for all your coursework, even your written dissertations and thesis work.</p>
 
 		<p>We provide assistance in a wide range of assignments, from personal letters to book/music reviews, from ordinary research papers to Master’s Degree theses. Some clients simply ask us to revise the papers they finished themselves - to meet specific grammar or formatting standards, while others give us detailed outlines to ensure the paper meets a clearly defined set of standards and requirements. These details are important to your success, your success is about meeting higher standards, accomplishing better work, and overcoming the challenges of school.</p>
 
@@ -220,27 +222,6 @@
 		<p>If you provide all the necessary data and articulate your order properly, your writer will quickly be able to assess and complete your order in a timely manner. A clear order is more likely to receive a paper that fits all requirements. This is key to providing that exceptional quality that makes our organization a top choice for students looking for professional services.</p>
 
 		<p>We’re very flexible, and discuss each assignment on a personal basis; above all, we value communication. If you help us, we’ll help you, and the benefit will of course be mutual.</p>
-	</section>
-
-	<section>
-		<h3>How Can I Apply for a Discount?</h3>
-		<p>We are always glad to see clients return to use our services once again.</p>
-
-		<p>Therefore, we have developed a system of life-time discounts to make your experience with us even more pleasant.</p>
-
-		<p>If you are a returned customer, a lifetime discount code will be given to you based on your history with EssayHave.com. Among the cases when the customer is eligible for a lifetime discount are the following:</p>
-
-		<ul class="red-bullets">
-			<li>5% lifetime for more than $500;</li>
-			<li>10% lifetime for more than $1000;</li>
-			<li>15% lifetime for more than $2000.</li>
-		</ul>
-
-		<p>The total cost of your previous orders ($500, $1000 or $2000) should include only payments for those projects which have already been completed and approved.</p>
-
-		<p>If you want to get a discount for a particular order with the total price over $500, you can contact our support team and they will provide you with a one-time discount code accordingly. Please note that you will be able to use only one discount code per one single order.</p>
-
-		<p>For more information about our Discount Policy, please visit the "Discounts" section of your personal order page.</p>
 	</section>
 	
 </div>
