--- a/templates/pages/terms-conditions.html
+++ b/templates/pages/terms-conditions.html
@@ -1,6 +1,6 @@
 {% extends 'index.html' %}
 
-{% block head_meta %}<meta name="robots" content="nofollow" />{% endblock %}
+{% block head_meta %}<meta name="robots" content="nofollow, noindex" />{% endblock %}
 
 {% block meta_title %}Terms & Conditions{% endblock %}
 {% block meta_description %}{% endblock %}
