--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,9 @@
   <link href="{{ STATIC_URL }}css/theme.default.css" rel="stylesheet" media="screen">
   <link href="{{ STATIC_URL }}css/style.css?v=6" rel="stylesheet" media="screen">
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  {# <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> #}
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
   <script src="{{ STATIC_URL }}js/bootstrap.js"></script>
   <script src="{{ STATIC_URL }}js/jquery.themepunch.plugins.min.js"></script>
   <script src="{{ STATIC_URL }}js/jquery.themepunch.revolution.min.js"></script>
@@ -69,6 +71,7 @@
       {% endblock %}
     </div>
     {% include 'html/footer.html' %}
+	
     <!-- Some useful functions. Don't remove. -->
     <script>
     $( '.momdl' ).each( function( ) {
@@ -76,5 +79,6 @@
         $( this ).html( moment( ts, 'X' ).fromNow( ) );
     });
     </script>
+	
   </body>
 </html>
