--- a/templates/orders/order_id.html
+++ b/templates/orders/order_id.html
@@ -105,7 +105,6 @@
        <th>Delivery</th>
        <td class="momdl">{{order.writer_deadline}}
         {% comment %}
-        // Тимчасово відсутня функція
         <a href="#" class="btn-extend" data-toggle="modal" data-target="#modalExtend">
          <span class="fa-stack">
           <i class="fa fa-circle-thin fa-stack-2x"></i>
@@ -164,7 +163,7 @@
 
    <div class="row text-center order-actions">
     {% if perm.can_delete %}
-      <a href="{% url 'order-id-delete' order.pk %}" class="btn btn-default" data-toggle="modal" data-target="#modalDelete">Delete</a>
+      <a href="#" class="btn btn-default" data-toggle="modal" data-target="#modalDelete">Delete</a>
     {% endif %}
     {% if perm.can_edit %}
       <a href="{% url 'order-id-edit' order.pk %}" class="btn btn-default">Edit</a>
@@ -191,7 +190,6 @@
      </button>
      <h4 class="modal-title" id="myModalLabel">Extend Deadline</h4>
     </div>
-
     <div class="modal-body">
      <form class="form-inline">
       <div class="form-group">
@@ -213,9 +211,9 @@
  </div>
  <!-- end Extend modal-->
  
+
  <!-- begin Delete modal-->
- <form action="{% url 'order-id-delete' order.pk %}" method="post">
- {% csrf_token %}
+ {% comment %}
  <div class="modal fade order-modal" id="modalDelete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-md">
    <div class="modal-content">
@@ -232,7 +230,29 @@
    </div>
   </div>
  </div>
- </form>
+ {% endcomment %}
+ 
+ 
+<!-- begin Delete modal-->
+ <div class="modal fade order-modal" id="modalDelete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-md">
+   <div class="modal-content">
+    <div class="modal-header">
+     <button type="button" class="close" data-dismiss="modal">
+      <span aria-hidden="true"></span><span class="sr-only">Close</span>
+     </button>
+     <h4 class="modal-title" id="myModalLabel">Are you sure?</h4>
+    </div>
+     <form action="{% url 'order-id-delete' order.pk %}" method="post">
+       {% csrf_token %}
+       <div class="modal-footer">
+         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+         <button type="submit" data-toggle="modal" class="btn btn-primary">Delete</button>
+       </div>
+     </form>
+   </div>
+  </div>
+ </div>
 
  <!-- begin Upload File modal-->
  <div class="modal fade order-modal" id="modalUploadFile" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -292,6 +312,7 @@
   </div>
  </div>
  <!-- end Delete Success modal-->
+ 
  <!-- END MODALS -->
 </div>
 <!-- END MIDDLE LAYOUT -->
