--- a/templates/orders/order_id_edit.html
+++ b/templates/orders/order_id_edit.html
@@ -196,14 +196,14 @@
      </div>
 	 
      <div class="row text-center order-actions">
-       <a href="{% url 'order-id-delete' order.pk %}" class="btn btn-default" data-toggle="modal" data-target="#modalDelete">Delete</a> 
+       <a href="#" class="btn btn-default" data-toggle="modal" data-target="#modalDelete">Delete</a> 
        <button type="submit" class="btn btn-primary">Save changes</button>
      </div>
 	 
    </form>
 
    <!-- begin Delete modal-->
-   <div class="modal fade order-modal" id="modalDelete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+   <!--div class="modal fade order-modal" id="modalDelete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-md">
      <div class="modal-content">
       <div class="modal-header">
@@ -218,7 +218,7 @@
      </div>
      </div>
     </div>
-   </div>
+   </div-->
    <!-- end Delete modal-->
 
   </div><!-- End Details Tab -->
@@ -276,10 +276,13 @@
      </button>
      <h4 class="modal-title" id="myModalLabel">Are you sure?</h4>
     </div>
-    <div class="modal-footer">
-     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-     <button type="button" class="btn btn-primary">Delete</button>
-   </div>
+     <form action="{% url 'order-id-delete' order.pk %}" method="post">
+       {% csrf_token %}
+       <div class="modal-footer">
+         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+         <button type="submit" data-toggle="modal" class="btn btn-primary">Delete</button>
+       </div>
+     </form>
    </div>
   </div>
  </div>
