--- a/templates/pages/plagiarism-free-guarantee.html
+++ b/templates/pages/plagiarism-free-guarantee.html
@@ -1,6 +1,6 @@
 {% extends 'index.html' %}
 
-{% block head_meta %}<meta name="robots" content="nofollow" />{% endblock %}
+{% block head_meta %}<meta name="robots" content="nofollow, noindex" />{% endblock %}
 
 {% block meta_title %}Plagiarism-Free Guarantee{% endblock %}
 {% block meta_description %}{% endblock %}
