--- a/templates/orders/order_id_edit.html
+++ b/templates/orders/order_id_edit.html
@@ -194,33 +194,11 @@
        {% if form.urgency.errors %}<span class="validation-message">{{form.urgency.errors|striptags}}</span>{% endif %}
       </div>
      </div>
-	 
      <div class="row text-center order-actions">
        <a href="#" class="btn btn-default" data-toggle="modal" data-target="#modalDelete">Delete</a> 
        <button type="submit" class="btn btn-primary">Save changes</button>
      </div>
-	 
    </form>
-
-   <!-- begin Delete modal-->
-   <!--div class="modal fade order-modal" id="modalDelete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-md">
-     <div class="modal-content">
-      <div class="modal-header">
-       <button type="button" class="close" data-dismiss="modal">
-        <span aria-hidden="true"></span><span class="sr-only">Close</span>
-       </button>
-       <h4 class="modal-title" id="myModalLabel">Are you sure?</h4>
-      </div>
-      <div class="modal-footer">
-       <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-       <button type="button" class="btn btn-primary">Delete</button>
-     </div>
-     </div>
-    </div>
-   </div-->
-   <!-- end Delete modal-->
-
   </div><!-- End Details Tab -->
 
   {% include "orders/files_tab.html" %}
@@ -312,25 +290,14 @@
        </div>
       </div>
       <div class="submit-group">
-       <button type="button" data-toggle="modal" data-target="#modalUploadSuccess" class="btn btn-primary">Upload</button>
+       <button type="button" class="btn btn-primary">Upload</button>
       </div>
      </form>
     </div>
-
    </div>
   </div>
  </div>
  <!-- end Delete modal-->
- 
- <!-- begin Upload Success modal-->
- <div class="modal fade order-modal" id="modalUploadSuccess" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-md">
-   <div class="modal-content">
-    <div class="modal-body">File uploaded successfull</div>
-   </div>
-  </div>
- </div>
- <!-- end Upload Success modal-->
  <!-- END MODALS -->
 </div>
 <!-- END MIDDLE LAYOUT -->
